[workspace]
resolver = "2"
members = ["aoc-utils", "year-*/day-*/rs-*"]

[workspace.dependencies]
clap = "4.4.12"
glam = "0.25.0"
itertools = { version = "0.12.0" }
nom = "7.1.3"
rayon = "1.8.0"
regex = "1.10.2"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
num = "0.4.1"
pathfinding = "4.8.0"
nalgebra = "0.32.3"
indicatif = { version = "0.17.7", features = ["rayon"] }
