[package]
name = "rs-2024-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
aoc-utils = { path = "../../../aoc-utils" }

[dev-dependencies]

[[bin]]
name = "rs-2024-02-pt2"
path = "src/bin/part2.rs"

[[bin]]
name = "rs-2024-01-pt2"
path = "src/bin/part2.rs"
