[package]
name = "rs-2025-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
aoc-utils = { path = "../../../aoc-utils" }

[dev-dependencies]

[[bin]]
name = "rs-2025-04-pt1"
path = "src/bin/part1.rs"

[[bin]]
name = "rs-2025-04-pt2"
path = "src/bin/part2.rs"
